PharmaDemo/src/objects/Order_Line_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Current_Stock__c</fullName>
        <label>Current Stock</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free__c</fullName>
        <label>Free</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <label>Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Stock_Product__c</referenceTo>
        <relationshipLabel>Order Line Details</relationshipLabel>
        <relationshipName>Order_Line_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Name__c</fullName>
        <label>SKU #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Order__c</fullName>
        <label>Stock Order</label>
        <referenceTo>Stock_Order__c</referenceTo>
        <relationshipLabel>Order Line Details</relationshipLabel>
        <relationshipName>Order_Line_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Details</relationshipLabel>
        <relationshipName>Order_Line_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Line Detail</label>
    <nameField>
        <displayFormat>LINE-{00000}</displayFormat>
        <label>Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>